--- a/project.html
+++ b/project.html
@@ -2,20 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Drivers US</title>
+    <title>GHG Emission</title>
+    <link rel="stylesheet" type="text/css" href="d3.slider.css">
     <link rel="stylesheet" type="text/css" href="project.css"/>
-</head>
-<body>
+
     <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/datamaps/0.4.4/datamaps.world.js"></script>
     <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
-    <header></header>
+    <script src="d3.slider.js"></script>
+</head>
+<body>
+    <header>GREEN HOUSE GASES EMISSIONS</header>
     <div id="container">
-        <button type="button" class="button" id="GHG">Green House Gases</button>
-        <button type="button" class="button" id="Population">Population</button>
-        <button type="button" class="button" id="GDP">Gross Domestic Product</button>
+        <div id="worlddata">
+            <button type="button" class="button" id="button_GHG">Green House Gases</button>
+            <button type="button" class="button" id="button_Population">Population</button>
+            <button type="button" class="button" id="button_GDP">Gross Domestic Product</button>
+            <div id="slider"></div>
+        </div>
+        <div id="pie">
+            <h2 id="country_name">Netherlands</h2>
+        </div>
+        <div id="multi_linegraph">
+
+        </div>
     </div>
+    <footer>LAILA BLÖMER - 10563865</footer>
     <script src="project.js"></script>
 </body>
 </html>
