--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
     <title>GHG Emission</title>
     <link rel="stylesheet" type="text/css" href="css/d3.slider.css">
