Better Code Hub

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
     </div>
 
     <script src="javascript/d3.slider.js"></script>
-    <script src="javascript/molecule.js"></script>
     <script src="javascript/functions.js"></script>
+    <script src="javascript/linegraph.js"></script>
     <script src="javascript/main.js"></script>
 </body>
 </html>
