Better Code Hub

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="row" id="slider"></div>
                 </div>
                 <div class="row">
-                    <div id="multi_linegraph" class="col-lg-12">
+                    <div id="multi_linegraph">
                         <h3 id="linegraph-title">Netherlands</h3>
                     </div>
                 </div>
@@ -132,7 +132,9 @@
 
     <script src="javascript/d3.slider.js"></script>
     <script src="javascript/functions.js"></script>
+    <script src="javascript/worldmap.js"></script>
     <script src="javascript/linegraph.js"></script>
+    <script src="javascript/molecule.js"></script>
     <script src="javascript/main.js"></script>
 </body>
 </html>
