cleaning up code

--- a/GreenhouseGasEmission/index.html
+++ b/GreenhouseGasEmission/index.html
@@ -83,7 +83,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div id="gas_info" class="col-lg-12">
+                    <div id="gas_info">
                         <div class="row">
                             <h3 id="title"></h3>
                         </div>
@@ -126,7 +126,9 @@
             </div>
         </div>
         <div class="row">
-            <footer>LAILA BLÖMER - 10563865</footer>
+            <footer>LAILA BLÖMER
+                <br>Source: CAIT Climate Data Explorer. 2015. Washington, DC: World Resources Institute.
+            </footer>
         </div>
     </div>
 
