writing simpler units of code

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <div class="col-lg-7">
                 <div class="row" id="worlddata-row">
                     <div class="row">
-                        <button type="button" class="button" id="button_GHG">Greenhouse Gases</button>
-                        <button type="button" class="button" id="button_Population">Population</button>
-                        <button type="button" class="button" id="button_GDP">Gross Domestic Product</button>
+                        <button type="button" class="button" id="GHG">Greenhouse Gases</button>
+                        <button type="button" class="button" id="population">Population</button>
+                        <button type="button" class="button" id="GDP">Gross Domestic Product</button>
                     </div>
                     <div class="row" id="worlddata"></div>
                     <div class="row" id="slider"></div>
@@ -63,11 +63,11 @@
                                     </tr>
                                     <tr>
                                         <td class="first">Population</td>
-                                        <td id="population" class="second">-</td>
+                                        <td id="people" class="second">-</td>
                                     </tr>
                                     <tr>
                                         <td class="first">GDP (USD)</td>
-                                        <td id="gdp" class="second">-</td>
+                                        <td id="product" class="second">-</td>
                                     </tr>
                                     <tr>
                                         <td class="first">Total Emission</td>
@@ -137,6 +137,7 @@
     <script src="javascript/worldmap.js"></script>
     <script src="javascript/linegraph.js"></script>
     <script src="javascript/molecule.js"></script>
+
     <script src="javascript/main.js"></script>
 </body>
 </html>
