--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 </head>
 <body>
-	<div class="container-fluid" id="container">
+	<div class="container-fluid" id="container" style="max-width: 1540px;">
 		<div class="row">
 			<header>
 				GREENHOUSE GAS EMISSIONS
