--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
-    <title>GHG Emission</title>
+    <title>Greenhouse Gas Emission</title>
     <link rel="stylesheet" type="text/css" href="css/d3.slider.css">
     <link rel="stylesheet" type="text/css" href="css/main.css"/>
     <link rel="stylesheet" type="text/css" href="css/molecule.css"/>
@@ -19,7 +19,6 @@
     <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
     <script src="javascript/jquery-3.1.1.min.js"></script>
     <script src="javascript/bootstrap.min.js"></script>
-
 </head>
 <body>
 	<div class="container-fluid" id="container" style="max-width: 1540px;">
